@@ -1,3 +1,8 @@
+2007-06-12  Abel Cheung  <abelcheung@gmail.com>
+
+	* wp-scorerender.php, class.*.php:
+	More complete documentation.
+
 2007-06-10  Abel Cheung  <abelcheung@gmail.com>
 
 	* wp-scorerender.php: PHP4 compatibility fix.
